# peano_typ

./: .gitignore  README.md  README.orig.md  export.py  makefile  pack.py  typacker.py  typst.toml
demo/: n-ball-volumn.typ  pythagorean-tuning.typ
src/: func.typ  lib.typ  ntheory.typ  number.typ  special.typ
src/_impl/: init.typ  math-utils.wasm  ntheory.typ  special.typ
src/_impl/func/: common.typ  init.typ  special.typ
src/_impl/number/: complex.typ  init.typ  rational.typ
src/_impl/number/complex/: arith.typ  init.typ  repr.typ
src/_impl/number/mp/rational/: arith.typ  repr.typ
src/_impl/number/rational/: arith.typ  const.typ  init.typ  repr.typ
src/func/: common.typ  special.typ
src/number/: complex.typ  rational.typ
src/number/complex/: arith.typ  const.typ  init.typ  repr.typ
src/number/mp/rational/: arith.typ
src/number/rational/: arith.typ  const.typ  init.typ  repr.typ
wasm/math-utils/: Cargo.toml  makefile
wasm/math-utils/crates/math-utils-base/: Cargo.toml
wasm/math-utils/crates/math-utils-base/src/: lib.rs  macros.rs  mpn_ext.rs  mpq_ext.rs  mpz_ext.rs  parsing.rs  traits.rs
wasm/math-utils/crates/math-utils-proc-macro/: Cargo.toml
wasm/math-utils/crates/math-utils-proc-macro/src/: lib.rs
wasm/math-utils/src/: complex.rs  frac.rs  lib.rs  quat.rs
