[package]
name = "math-utils"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.2"
num = { version = "0.4.3", features = ["serde"] }
# counter = "0.7.0"
prime_factorization = "1.0.5"
scirs2-special = "0.1.0-alpha.6"
wasm-minimal-protocol = "0.1.0"
fraction = "0.15.3"
serde = "1.0.228"
paste = "1.0.15"
spfunc = "0.1.3"
thiserror = "2.0.17"
anyhow = "1.0.100"
num-prime = "0.4.4"

[profile.release]
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[workspace]
